manifest/chat-app/chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-chat-ingress
  namespace: ollama
  labels:
    env: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ai.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama-chat
            port:
              number: 8000
